2000-09-19 10:40 UTC+0800 Ron Pinkas <ron@profit-master.com>
   * source/pp/ppcore.c
     ! Corrected JFL previous change, which commented a fix that solved problem with code like "@&Row,...".
       This fix will address both the #xtranslate @@ => ... as well as the previous needed fix.

2000-09-20 00:52 UTC+0200 JFL (mafact) <jfl@mafact.com>
   * source/pp/ppcore.c
     corrected #command @@ => ...
               #xtranslate = name{ ...
   * include/hbclass.ch
     supresses the (now) unneeded #xtranslate := name{ ...
     as = name{... is working for the two case

2000-09-19 10:40 UTC+0800 Ron Pinkas <ron@profit-master.com>
   * config/dos/djgpp.cf
     + Added support for $(L_USR)

2000-09-19 10:30 UTC+0800 Ron Pinkas <ron@profit-master.com>
   * config/c.cf
   * source/compiler/makefile.
     * Modified to use harbour.sly rather than harbour.y when using SimpLex.

2000-09-18 09:30 UTC+0800 Ron Pinkas <ron@profit-master.com>
   * source/compiler/harbour.slx
   * source/compiler/harbour.sly
   * source/compiler/harbour.y
   * source/compiler/simplex.c
   * source/macro/macro.slx
     ! Corrected compiler warnings.

2000-09-17 23:45 UTC+0800 Ron Pinkas <ron@profit-master.com>
   * source/compiler/harbour.l
     ! Corrected definition of _PROCREQ_()

   * tests/testdecl.prg
     - Removed 1 line of unspported syntax.

   * source/macro/macro.slx
   * source/compiler/harbour.slx
     % Greatly optimized, much simplified, smaller, and faster.
     ! Converted all "non conventional" macros to functions.

   * source/compiler/simplex.c
     % Greatly optimized, now as fast as Flex based lexer.
     ! Converted all "non conventional" macros to functions.
     + Added support for predefind match pattern, {WS} (White Space), in KEYWORDS and WORDS.

   + source/compiler/harbour.sly
     * Same as harbour.y, excluding un-needed support for reserved words used as identifiers.